# ValaAndroid

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/nl/hypothermic/valadroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .buildconfig  CMakeLists.txt  MyLibHeader.h  MyValaFile.vala  native-lib.cpp
app/src/main/cpp/cmake/: Format.cmake  UseRPMTools.cmake  cmake-vala.LICENSE
app/src/main/cpp/glib/: gthread.h
app/src/main/cpp/lib/: libasprintf.so.0  libcharset.so.1  libgio-2.0.so.0  libglib-2.0.so.0  libgmodule-2.0.so.0  libgobject-2.0.so.0  libgthread-2.0.so.0  libiconv.so.2  libintl.so.8
app/src/main/java/nl/hypothermic/valadroid/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/nl/hypothermic/valadroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
